--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -25,5 +25,20 @@
   <view class="usermotto">
     <text class="user-motto" bindtap="navigateToEditor">{{motto}}</text>
   </view>
+  <!-- <view>
+    <button bindgetuserinfo="login" open-type="getUserInfo" type="primary">登录</button>
+  </view> -->
+  <view class="container">
+    <view class="userinfo">
+      <block wx:if="{{!hasUserInfo}}">
+        <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile"> 获取头像昵称 </button>
+        <button wx:else open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
+      </block>
+      <block wx:else>
+        <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
+        <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+      </block>
+    </view>
+  </view>
 
 </view>
