--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,19 +1,13 @@
 /**index.wxss**/
-.userinfo {
+.logo-view{
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  color: #aaa;
 }
-
-.userinfo-avatar {
-  overflow: hidden;
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.usermotto {
-  margin-top: 200px;
+.logo{
+  margin-top: 70px;
+  height: 150px;
+  border-radius: 8px;
+  border: 5px solid #F2F2F2;
+  margin-bottom: 70px;
 }
